--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,9 @@
+2003-12-05  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpimage.sgml
+	* libgimp/tmpl/gimpundo.sgml: follow undo API changes.
+
 2003-12-04  Michael Natterer  <mitch@gimp>
 
 	* libgimp/libgimp-sections.txt
