2003-12-05  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/drawable.pdb: renamed gimp_drawable_bytes() to
	gimp_drawable_bpp() because all other libgimp API speak in terms
	of "bpp" too.

	* libgimp/gimpdrawable.h: removed gimp_drawable_bpp #define.

	* app/pdb/procedural_db.c
	* libgimp/gimpcompat.h: added compat stuff.

	* app/pdb/drawable_cmds.c
	* libgimp/gimpdrawable_pdb.[ch]: regenerated.

	* plug-ins/common/pix.c
	* plug-ins/common/psd_save.c: changed accordingly.

2003-12-05  Michael Natterer  <mitch@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpdrawable.sgml: s/drawable_bytes/drawable_bpp/.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11703 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,22 @@
 2003-12-05  Michael Natterer  <mitch@gimp.org>
 
+	* tools/pdbgen/pdb/drawable.pdb: renamed gimp_drawable_bytes() to
+	gimp_drawable_bpp() because all other libgimp API speak in terms
+	of "bpp" too.
+
+	* libgimp/gimpdrawable.h: removed gimp_drawable_bpp #define.
+
+	* app/pdb/procedural_db.c
+	* libgimp/gimpcompat.h: added compat stuff.
+
+	* app/pdb/drawable_cmds.c
+	* libgimp/gimpdrawable_pdb.[ch]: regenerated.
+
+	* plug-ins/common/pix.c
+	* plug-ins/common/psd_save.c: changed accordingly.
+
+2003-12-05  Michael Natterer  <mitch@gimp.org>
+
 	* tools/pdbgen/pdb/image.pdb: removed gimp_image_undo_*() functions...
 
 	* tools/pdbgen/pdb/undo.pdb: ...and added them here. Renamed
