2003-12-05  Sven Neumann  <sven@gimp.org>
	* libgimp/gimp.def: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11705 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-05  Sven Neumann  <sven@gimp.org>
+
+	* libgimp/gimp.def: updated.
+
 2003-12-05  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/gimp.h
