2003-12-05  Michael Natterer  <mitch@gimp.org>
	Name all PDB procedures which deal with floating selections
	consistently:

	* tools/pdbgen/pdb/image.pdb: renamed
	gimp_image_floating_selection() to gimp_image_get_floating_sel().

	* libgimp/gimplayer.h: removed gimp_layer_is_floating_selection #define.

	* libgimp/gimpcompat.h
	* app/pdb/procedural_db.c: added compat stuff.

	* app/pdb/image_cmds.c
	* libgimp/gimpimage_pdb.[ch]: regenerated.

	* plug-ins/common/curve_bend.c
	* plug-ins/common/film.c
	* plug-ins/common/rotate.c
	* plug-ins/pygimp/pygimp-image.c
	* plug-ins/xjt/xjt.c: changed accordingly.

2003-12-05  Michael Natterer  <mitch@gimp.org>

	* libgimp/libgimp-sections.txt
	* libgimp/tmpl/gimpimage.sgml
	* libgimp/tmpl/gimplayer.sgml: follow floating_sel cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11706 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,25 @@
+2003-12-05  Michael Natterer  <mitch@gimp.org>
+
+	Name all PDB procedures which deal with floating selections
+	consistently:
+
+	* tools/pdbgen/pdb/image.pdb: renamed
+	gimp_image_floating_selection() to gimp_image_get_floating_sel().
+
+	* libgimp/gimplayer.h: removed gimp_layer_is_floating_selection #define.
+
+	* libgimp/gimpcompat.h
+	* app/pdb/procedural_db.c: added compat stuff.
+
+	* app/pdb/image_cmds.c
+	* libgimp/gimpimage_pdb.[ch]: regenerated.
+
+	* plug-ins/common/curve_bend.c
+	* plug-ins/common/film.c
+	* plug-ins/common/rotate.c
+	* plug-ins/pygimp/pygimp-image.c
+	* plug-ins/xjt/xjt.c: changed accordingly.
+
 2003-12-05  Sven Neumann  <sven@gimp.org>
 
 	* libgimp/gimp.def: updated.
