--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,6 +1,12 @@
 2003-12-05  Michael Natterer  <mitch@gimp.org>
 
 	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpimage.sgml
+	* libgimp/tmpl/gimplayer.sgml: follow floating_sel cleanup.
+
+2003-12-05  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
 	* libgimp/tmpl/gimpdrawable.sgml: s/drawable_bytes/drawable_bpp/.
 
 2003-12-05  Michael Natterer  <mitch@gimp.org>
