2003-12-05  Manish Singh  <yosh@gimp.org>
        * plug-ins/common/gif.c: always compare using unsigned chars for 7bit
        ASCII check.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11709 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-05  Manish Singh  <yosh@gimp.org>
+
+	* plug-ins/common/gif.c: always compare using unsigned chars for 7bit
+	ASCII check.
+
 2003-12-05  Michael Natterer  <mitch@gimp.org>
 
 	* app/pdb/pdb-types.h: added enum GimpPDBCompatMode which can
