--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,20 @@
+2003-12-06  Michael Natterer  <mitch@gimp.org>
+
+	* app/xcf/xcf-private.h: added "GimpTattoo tattoo_state" to the
+	XcfInfo struct.
+
+	* app/xcf/xcf.c (xcf_load_invoker): initialize it to 0.
+
+	* app/xcf/xcf-load.c (xcf_load_image_props): remember PROP_TATTOO
+	in info->tattoo_state instead of setting it directly in the
+	GimpImage struct.
+
+	(xcf_load_image): set the remembered tattoo_state after all items
+	are created.
+
+	(Fixes the regression that "open -> don't modify -> save" didn't
+	result in 100% identical XCF files).
+
 2003-12-05  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/common/gif.c: always compare using unsigned chars for 7bit
