2003-12-06  Michael Natterer  <mitch@gimp.org>
	* app/widgets/gimphelp.c (gimp_idle_help): cleanup.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11711 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2003-12-06  Michael Natterer  <mitch@gimp.org>
 
+	* app/widgets/gimphelp.c (gimp_idle_help): cleanup.
+
+2003-12-06  Michael Natterer  <mitch@gimp.org>
+
 	* app/xcf/xcf-private.h: added "GimpTattoo tattoo_state" to the
 	XcfInfo struct.
 
