2003-12-06  Michael Natterer  <mitch@gimp.org>
	* tools/pdbgen/pdb/image.pdb (image_delete): fixed "success"
	return value.

	* app/pdb/image_cmds.c: regenerated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11712 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-12-06  Michael Natterer  <mitch@gimp.org>
 
+	* tools/pdbgen/pdb/image.pdb (image_delete): fixed "success"
+	return value.
+
+	* app/pdb/image_cmds.c: regenerated.
+
+2003-12-06  Michael Natterer  <mitch@gimp.org>
+
 	* app/widgets/gimphelp.c (gimp_idle_help): cleanup.
 
 2003-12-06  Michael Natterer  <mitch@gimp.org>
