--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-07  Marco Ciampa  <ciampix@libero.it>
+
+	* it.po: Updated italian translation
+	
 2003-12-04  Jan Morén  <jan.moren@lucs.lu.se>
 
 	* sv.po: Updated Swedish translation.
