2003-12-07  Dave Neary  <bolsh@gimp.org>
        * NEWS: Updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11714 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-07  Dave Neary  <bolsh@gimp.org>
+
+	* NEWS: Updated.
+
 2003-12-06  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/image.pdb (image_delete): fixed "success"
