--- a/NEWS
+++ b/NEWS
@@ -7,6 +7,17 @@ GIMP 1.3 is the development branch of The GIMP. Here's where the
 development takes place on the road to the next stable release
 GIMP version 2.0.
 
+Overview of Changes in GIMP 1.3.24
+==================================
+- Created a library to allow thumbnail handling in plug-ins [Sven]
+- Support for multipage TIFFs [Andrey Kiselev]
+- Added a channel mixer plug-in [Martin Guldahl, Yosh]
+- Compatibility layer for 1.2 scripts and plug-ins [mitch]
+- Lots of bug fixes
+
+Other contributors:
+  Adam Moss, David Neary, Jakub Steiner, Helvetix Victorinox, Pedro 
+  Gimeno, Adrian Bunk, Abel Cheung, Maurits Rijk, Ville Pätsi
 
 Overview of Changes in GIMP 1.3.23
 ==================================
