--- a/po-script-fu/ChangeLog
+++ b/po-script-fu/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-08  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
 2003-12-04  Jan Morén  <jan.moren@lucs.lu.se>
 
         * sv.po: Updated Swedish translation.
