2003-12-08  Sven Neumann  <sven@gimp.org>
	* configure.in: bumped version number to 1.3.24.
        (AC_CONFIG_FILES): added files in devel-docs/libgimpthumb.

	* gimp.spec.in: added files from libgimpthumb.

2003-12-08  Sven Neumann  <sven@gimp.org>

	* Makefile.am
	* libgimpthumb/Makefile.am
	* libgimpthumb/libgimpthumb-docs.sgml
	* libgimpthumb/libgimpthumb-sections.txt
	* libgimpthumb/libgimpthumb.types
	* libgimpthumb/version.in
	* libgimpthumb/tmpl/gimpthumb-enums.sgml
	* libgimpthumb/tmpl/gimpthumb-error.sgml
	* libgimpthumb/tmpl/gimpthumb-utils.sgml
	* libgimpthumb/tmpl/gimpthumbnail.sgml: added framework for
	libgimpthumb documentation.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11721 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2003-12-08  Sven Neumann  <sven@gimp.org>
 
+	* configure.in: bumped version number to 1.3.24.
+        (AC_CONFIG_FILES): added files in devel-docs/libgimpthumb.
+
+	* gimp.spec.in: added files from libgimpthumb.
+
+2003-12-08  Sven Neumann  <sven@gimp.org>
+
 	* app/tools/gimpcroptool.c (gimp_crop_tool_draw): an XOR line was
 	being drawn twice; spotted by Marco Munari.
 
