--- a/NEWS
+++ b/NEWS
@@ -9,15 +9,16 @@ GIMP version 2.0.
 
 Overview of Changes in GIMP 1.3.24
 ==================================
-- Created a library to allow thumbnail handling in plug-ins [Sven]
+- Created a library for handling thumbnails [Sven]
 - Support for multipage TIFFs [Andrey Kiselev]
 - Added a channel mixer plug-in [Martin Guldahl, Yosh]
-- Compatibility layer for 1.2 scripts and plug-ins [mitch]
+- PDB cleanup and compatibility mode [Mitch]
 - Lots of bug fixes
 
 Other contributors:
-  Adam Moss, David Neary, Jakub Steiner, Helvetix Victorinox, Pedro 
-  Gimeno, Adrian Bunk, Abel Cheung, Maurits Rijk, Ville Pätsi
+  Adam Moss, David Neary, Jakub Steiner, Helvetix Victorinox, Pedro Gimeno,
+  Adrian Bunk, Abel Cheung, Maurits Rijk, Ville Pätsi, Marco Munari
+
 
 Overview of Changes in GIMP 1.3.23
 ==================================
