--- a/po-libgimp/ChangeLog
+++ b/po-libgimp/ChangeLog
@@ -1,3 +1,7 @@
+2003-12-08  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2003-12-08  Sven Neumann  <sven@gimp.org>
 
 	* POTFILES.in: added files from libgimpthumb.
