--- a/po-libgimp/cs.po
+++ b/po-libgimp/cs.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: gimp-libgimp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2003-11-24 01:38+0100\n"
-"PO-Revision-Date: 2003-11-18 15:49+0100\n"
+"POT-Creation-Date: 2003-12-08 03:42+0100\n"
+"PO-Revision-Date: 2003-12-08 13:23+0100\n"
 "Last-Translator: Miloslav Trmač <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -400,11 +400,11 @@ msgstr "Trojice he_x:"
 
 #: libgimpwidgets/gimpcolorselection.c:203
 msgid "Current:"
-msgstr ""
+msgstr "Aktuální:"
 
 #: libgimpwidgets/gimpcolorselection.c:225
 msgid "Old:"
-msgstr ""
+msgstr "Staré:"
 
 #: libgimpwidgets/gimpfileentry.c:331
 msgid "Select Folder"
@@ -414,15 +414,15 @@ msgstr "Výběr adresáře"
 msgid "Select File"
 msgstr "Výběr souboru"
 
-#: libgimpwidgets/gimpmemsizeentry.c:233
+#: libgimpwidgets/gimpmemsizeentry.c:234
 msgid "KiloBytes"
 msgstr "kilobajtů"
 
-#: libgimpwidgets/gimpmemsizeentry.c:234
+#: libgimpwidgets/gimpmemsizeentry.c:235
 msgid "MegaBytes"
 msgstr "megabajtů"
 
-#: libgimpwidgets/gimpmemsizeentry.c:235
+#: libgimpwidgets/gimpmemsizeentry.c:236
 msgid "GigaBytes"
 msgstr "gigabajtů"
 
@@ -539,9 +539,8 @@ msgid "Color Deficient Vision"
 msgstr "Vidění s barevnou poruchou"
 
 #: modules/cdisplay_colorblind.c:464
-#, fuzzy
 msgid "Color _Deficiency Type:"
-msgstr "Typ barevné poruchy:"
+msgstr "Typ barevné _poruchy:"
 
 #: modules/cdisplay_colorblind.c:473
 msgid "Protanopia (insensitivity to red)"
@@ -564,9 +563,8 @@ msgid "Gamma"
 msgstr "Gama"
 
 #: modules/cdisplay_gamma.c:311
-#, fuzzy
 msgid "_Gamma:"
-msgstr "Gama:"
+msgstr "_Gama:"
 
 #: modules/cdisplay_highcontrast.c:90
 msgid "High Contrast color display filter"
@@ -577,9 +575,8 @@ msgid "Contrast"
 msgstr "Kontrast"
 
 #: modules/cdisplay_highcontrast.c:308
-#, fuzzy
 msgid "Contrast C_ycles:"
-msgstr "Cykly kontrastu:"
+msgstr "_Cykly kontrastu:"
 
 #: modules/cdisplay_proof.c:102
 msgid "Color proof filter using ICC color profile"
@@ -603,19 +600,19 @@ msgstr ""
 
 #: modules/cdisplay_proof.c:331
 msgid "_Intent:"
-msgstr ""
+msgstr "_Cíl:"
 
 #: modules/cdisplay_proof.c:334
 msgid "Choose an ICC Color Profile"
-msgstr ""
+msgstr "Zvolte profil barev ICC"
 
 #: modules/cdisplay_proof.c:337
 msgid "_Profile:"
-msgstr ""
+msgstr "_Profil:"
 
 #: modules/cdisplay_proof.c:345
 msgid "_Black Point Compensation"
-msgstr ""
+msgstr "_Kompenzace černého bodu"
 
 #: modules/colorsel_cmyk.c:73
 msgid "CMYK color selector"
@@ -680,6 +677,3 @@ msgstr "Vodová barva"
 #: modules/colorsel_water.c:251
 msgid "Pressure"
 msgstr "Tlak"
-
-#~ msgid "None (normal vision)"
-#~ msgstr "Žádný (normální vidění)"
