2003-12-08  Sven Neumann  <sven@gimp.org>
	* libgimpthumb/gimpthumb-utils.[ch]: renamed a function, added
	another one.

	* libgimpthumb/gimpthumb.def
	* libgimpthumb/gimpthumbnail.c: changed accordingly.

2003-12-08  Sven Neumann  <sven@gimp.org>

	* Makefile.am: removed unnecessary stuff.

	* libgimpthumb/libgimpthumb-sections.txt
	* libgimpthumb/tmpl/gimpthumb-utils.sgml: updated.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11726 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2003-12-08  Sven Neumann  <sven@gimp.org>
+
+	* libgimpthumb/gimpthumb-utils.[ch]: renamed a function, added
+	another one.
+
+	* libgimpthumb/gimpthumb.def
+	* libgimpthumb/gimpthumbnail.c: changed accordingly.
+
 2003-12-08  Michael Natterer  <mitch@gimp.org>
 
 	* tools/pdbgen/pdb/channel.pdb
