--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2003-12-08  Michael Natterer  <mitch@gimp.org>
+
+	* app/core/gimpdatafactory.c: code review / cleanup.
+
+	* app/plug-in/plug-in.c
+	* app/plug-in/plug-in-message.c: unified messages about plug-in
+	errors. Changed lots of g_warning()s to g_message()s because
+	g_warning() is for programming errors and the user should be
+	informed that the plug-in was killed and did not simply crash.
+
 2003-12-08  Sven Neumann  <sven@gimp.org>
 
 	* libgimpthumb/gimpthumb-utils.[ch]: renamed a function, added
