--- a/devel-docs/ChangeLog
+++ b/devel-docs/ChangeLog
@@ -1,3 +1,8 @@
+2003-12-08  Michael Natterer  <mitch@gimp.org>
+
+	* libgimp/libgimp-sections.txt
+	* libgimp/tmpl/gimpimage.sgml: updated.
+
 2003-12-08  Sven Neumann  <sven@gimp.org>
 
 	* Makefile.am: removed unnecessary stuff.
